--- a/css/responsive.css
+++ b/css/responsive.css
@@ -324,7 +324,8 @@
 		}
 	.robotAgreement{
 		float:right;
-		margin-top:-57px;
+		margin-top:-49px;
+		margin-right:13%;
 		}
 }
 /* Main Nav */
@@ -588,6 +589,9 @@
 		font-size: 14px;
 		margin-bottom: 2px;
 	}
+	.robotAgreement{
+		margin-right:5%;
+		}
 }
 
 @media only screen and (max-width: 405px){
