--- a/css/globalStyles.css
+++ b/css/globalStyles.css
@@ -661,6 +661,7 @@
 		float:left;
 		width:100%;
 		padding-top:10px;
+		padding-bottom:25px;
 		background: #6eb3e2; /* Old browsers */
 		background: -moz-linear-gradient(top,  #6eb3e2 0%, #d0e9f8 100%); /* FF3.6+ */
 		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6eb3e2), color-stop(100%,#d0e9f8)); /* Chrome,Safari4+ */
